# vsql-games

./: AGENTS.md  CMakeLists.txt  README.md  TESTING.md  manifest.json
.github/workflows/: ci.yml
agent-conversation/: acceptance_criteria.md  architecture.md  gemini-conversation.md  limitations.md  simplification.md
mysql-test/r/: sudoku_basic.result
mysql-test/t/: sudoku_basic.test
src/: vsql_games.cc
